--- a/Com.Nevelson.GameSettings.asmdef
+++ b/Com.Nevelson.GameSettings.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Com.Nevelson.GameOptionSettings",
+    "name": "Com.Nevelson.GameSettings",
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
